# motor-gui

./: Cargo.toml  Filter_need.md  PROGRESS_FILTER_V1.md  README.md  README_CHN.md  README_filters.md  build.rs
src/: controller.rs  io.rs  io_uring.rs  lib.rs  main.rs  motor_backend.rs  motor_ctx.rs
src/filter/: butter.rs  ema.rs  ma.rs  mod.rs
src/motor_backend/: ds402.rs  fourier.rs  protobuf.rs
src/protos/: motor.proto
tests/: filters.rs
