[package]
name = "motor-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-aios = { git = "https://github.com/w-utter/amber-aios-rust"}
eframe = "0.31"
egui = "0.31"
egui_plot = "0.32"
io-uring = "0.7"
duration-string = "0.5.2"
libc = "0.2"
csv = "1.3"
chrono = "0.4"

sysinfo = "0.37"
io-uring-buf-ring = {git = "https://github.com/w-utter/io-uring-buf-ring"}
ecat = {git = "https://github.com/w-utter/ecat"}
ethercrab = {git = "https://github.com/w-utter/ethercrab", branch = "io_uring-backend"}
ethercrab-wire = {git = "https://github.com/w-utter/ethercrab", branch = "io_uring-backend"}

protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "2"
